Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,7 @@ variables:
   imagePullSecret: 'pratheekacr28b27-auth'
 
   # Agent VM image name
+  pool: 'Default'
   vmImageName: 'pratheekVM'
 
 
