--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "product_management",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://20.249.169.237:31048/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
