--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,19 @@
 server {
   listen 80;
   server_name localhost;
- 
+
+  # Set root for all locations
+  root /usr/share/nginx/html;
+  index index.html index.htm;
+
   location / {
-    root /usr/share/nginx/html;
-    index index.html index.htm;
     try_files $uri /index.html;
+  }
+
+  # Optional: serve static assets efficiently
+  location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|otf|svg)$ {
+    expires 6M;
+    access_log off;
+    add_header Cache-Control "public";
   }
 }
